# cookiecutter-python

./: .pre-commit-config.yaml  .pylintrc  README.rst  cookiecutter.json  package-lock.json  package.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: .bumpversion.cfg  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.rst  package.json  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: build.yaml  ci.yml  codeql-analysis.yml
{{ cookiecutter.project_name }}/docs/: conf.py  index.rst  {{ cookiecutter.project_slug }}.rst
{{ cookiecutter.project_name }}/tests/: __init__.py  _test.py  conftest.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  _main.py  _version.py
